Fix up some scaling issues on mobile

--- a/ignavus.css
+++ b/ignavus.css
@@ -100,4 +100,5 @@ details[open] summary ~ * {
 
 details summary {
     font-size: larger;
+    cursor: pointer;
 }
